CORS config in api-gateway Docker networks for keycloak and service-registry